# rssgen

./: Cargo.toml  README.md
src/: main.rs
src/plugin/: lobsters.rs  mod.rs  nepszava.rs
