[package]
name = "rssgen"
edition = "2021"
version = "0.1.0"
authors = ["János Illés <ijanos@gmail.com>"]

[dependencies]
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
rss = "2.0"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
rusoto_credential = "0.48"
serde = "1.0"
serde_json = "1.0"


[dependencies.clap]
version = "4"
features = ["env", "derive"]

[dependencies.tokio]
version = "1"
optional = false
# default-features = false

[dependencies.ureq]
version = "2.6"
features = ["json"]
optional = false
